# object_search

./: CMakeLists.txt  README.md  package.xml
launch/: nav_goals.launch  object_search.launch  octomap.launch  search_agent.launch  search_agent_real.launch  search_params.launch
maps/: tum_kitchen_octomap.bt
src/: nav_goals_evaluation_server.cpp  supporting_plane_detector.cpp
src/object_search/: agent.py  object_search_cancel.py  object_search_client.py  object_search_server.py  search_agent.py  search_methods.py  searcher.py
