<?xml version="1.0"?>
<package>
  <name>object_search</name>
  <version>0.0.1</version>
  <description>The object_search package</description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>BSD</license>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
   
  <run_depend>roscpp</run_depend>
  <run_depend>octomap</run_depend>
</package>
