<?xml version="1.0"?>
<package>
  <name>object_search</name>
  <version>0.0.1</version>
  <description>The object_search package</description>

  <maintainer email="l.kunze@cs.bham.ac.uk">Lars Kunze</maintainer>

  <license>BSD</license>

  <author email="l.kunze@cs.bham.ac.uk">Lars Kunze</author> 

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>nav_goals_msgs</build_depend>
  <!-- <build_depend>beginner_tutorials</build_depend> -->
   
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>smach</run_depend>  
  <run_depend>smach_ros</run_depend>
  <run_depend>nav_goals_msgs</run_depend>
  <run_depend>classifier_srv_definitions</run_depend>
  <run_depend>object_search_action</run_depend>


  <!-- <run_depend>beginner_tutorials</run_depend> -->
</package>
